Worked around width limitations on tablet and mobile. Issue: #738

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -248,6 +248,15 @@ body {
   .advanced-filter {
     width: 3.3em;
   }
+
+  .clear-all-button {
+    cursor: pointer;
+    color: @grayDark;
+    width: 2em;
+    line-height: 3em;
+    display: inline-block;
+    text-align: center;
+  }
 }
 
 
@@ -999,6 +1008,18 @@ a.fa:hover {
     .mm-icon {
       font-size: 2em;
     }
+    .logo {
+      .logo-icon {
+        display: inherit;
+      }
+      .logo-full {
+        display: none;
+      }
+    }
+    .extras a {
+      padding-top: 0.3em;
+      margin-top: 0.5em;
+    }
   }
   .filters {
     text-align: right;
@@ -1142,11 +1163,6 @@ a.fa:hover {
 
   }
 
-  .header .extras a {
-    padding-top: 0.3em;
-    margin-top: 0.5em;
-  }
-
   .filter-daterangepicker {
     width: 245px;
     height: 240px;
@@ -1202,11 +1218,12 @@ a.fa:hover {
       left: 4em;
     }
   }
-  .header .logo {
-    .logo-icon {
-      display: inherit;
+  .header .tabs {
+    a {
+      padding-top: 0.8em;
+      width: 5em;
     }
-    .logo-full {
+    .button-label {
       display: none;
     }
   }
